[gd_scene load_steps=57 format=3 uid="uid://ru3nkrpj126d"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_5jda7"]
[ext_resource type="Texture2D" uid="uid://dj6fmkpfrm7do" path="res://assets/sprites/characters/player.png" id="2_0hvas"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ur8t4"]
atlas = ExtResource("2_0hvas")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a2t2"]
atlas = ExtResource("2_0hvas")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2fuy"]
atlas = ExtResource("2_0hvas")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eytrv"]
atlas = ExtResource("2_0hvas")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbwla"]
atlas = ExtResource("2_0hvas")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bau6d"]
atlas = ExtResource("2_0hvas")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah2ue"]
atlas = ExtResource("2_0hvas")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb6v6"]
atlas = ExtResource("2_0hvas")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfse7"]
atlas = ExtResource("2_0hvas")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cogwp"]
atlas = ExtResource("2_0hvas")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvhmb"]
atlas = ExtResource("2_0hvas")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxdb7"]
atlas = ExtResource("2_0hvas")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8cj2"]
atlas = ExtResource("2_0hvas")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx47d"]
atlas = ExtResource("2_0hvas")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_va840"]
atlas = ExtResource("2_0hvas")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qog0d"]
atlas = ExtResource("2_0hvas")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tm2i"]
atlas = ExtResource("2_0hvas")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg6p6"]
atlas = ExtResource("2_0hvas")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0pjo"]
atlas = ExtResource("2_0hvas")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0y62"]
atlas = ExtResource("2_0hvas")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmd1v"]
atlas = ExtResource("2_0hvas")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdu7o"]
atlas = ExtResource("2_0hvas")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7rid"]
atlas = ExtResource("2_0hvas")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv5m3"]
atlas = ExtResource("2_0hvas")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxiqa"]
atlas = ExtResource("2_0hvas")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0gjy"]
atlas = ExtResource("2_0hvas")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvgwo"]
atlas = ExtResource("2_0hvas")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqitj"]
atlas = ExtResource("2_0hvas")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dst5s"]
atlas = ExtResource("2_0hvas")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbynl"]
atlas = ExtResource("2_0hvas")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa5b3"]
atlas = ExtResource("2_0hvas")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdkqb"]
atlas = ExtResource("2_0hvas")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lre0"]
atlas = ExtResource("2_0hvas")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqctc"]
atlas = ExtResource("2_0hvas")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygpas"]
atlas = ExtResource("2_0hvas")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cxjl"]
atlas = ExtResource("2_0hvas")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2257"]
atlas = ExtResource("2_0hvas")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtvfx"]
atlas = ExtResource("2_0hvas")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikj78"]
atlas = ExtResource("2_0hvas")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wib3"]
atlas = ExtResource("2_0hvas")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_33yyv"]
atlas = ExtResource("2_0hvas")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ompbf"]
atlas = ExtResource("2_0hvas")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xovac"]
atlas = ExtResource("2_0hvas")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi42h"]
atlas = ExtResource("2_0hvas")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta7ye"]
atlas = ExtResource("2_0hvas")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j08vq"]
atlas = ExtResource("2_0hvas")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k434"]
atlas = ExtResource("2_0hvas")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypq67"]
atlas = ExtResource("2_0hvas")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gumsh"]
atlas = ExtResource("2_0hvas")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qepj"]
atlas = ExtResource("2_0hvas")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn15v"]
atlas = ExtResource("2_0hvas")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_jmvb7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur8t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a2t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2fuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eytrv")
}],
"loop": false,
"name": &"back_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbwla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bau6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah2ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb6v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfse7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cogwp")
}],
"loop": true,
"name": &"back_idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvhmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxdb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8cj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx47d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va840")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qog0d")
}],
"loop": true,
"name": &"back_walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tm2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg6p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0pjo")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0y62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmd1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdu7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7rid")
}],
"loop": false,
"name": &"front_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv5m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxiqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0gjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvgwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqitj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dst5s")
}],
"loop": true,
"name": &"front_idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbynl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa5b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdkqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lre0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqctc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygpas")
}],
"loop": true,
"name": &"front_walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cxjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2257")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtvfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikj78")
}],
"loop": false,
"name": &"side_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wib3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33yyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ompbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xovac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi42h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta7ye")
}],
"loop": true,
"name": &"side_idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j08vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k434")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypq67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gumsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qepj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn15v")
}],
"loop": true,
"name": &"side_walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2mr7e"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vpkly"]

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(0, -1)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_5jda7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(-1, -18)
sprite_frames = SubResource("SpriteFrames_jmvb7")
animation = &"back_attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
visibility_layer = 3
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_2mr7e")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(1, -8)
shape = SubResource("CircleShape2D_vpkly")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.75

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
